Fixed overflow when showing social media icons and other minor styling fixes

--- a/article-preview-component/styles.css
+++ b/article-preview-component/styles.css
@@ -27,11 +27,13 @@ body {
   justify-content: center;
   background: white;
   margin: 30px;
+  border-radius: 0 0 5px 5px;
 }
 
 .drawer-img {
   max-width: 100%;
   max-height: 100%;
+  /* rounded top corners on picture */
   border-radius: 5px 5px 0 0;
   object-fit: cover;
 }
@@ -50,22 +52,25 @@ h2 {
 
 .text-container > p {
   font-weight: 500;
-  margin: 30px;
+  margin: 1em 30px;
   font-size: 1.2rem;
   color: hsl(212, 23%, 69%);
 }
 
 #contributor-container {
+  display: flex;
   align-items: center;
-  justify-content: flex-start;
   margin-left: 40px;
   margin-right: 40px;
+  margin-bottom: 10px;
 }
 
 .avatar {
   border-radius: 50%;
   width: 50px;
+  height: 50px;
   margin-right: 20px;
+  margin-bottom: 10px;
 }
 
 .contributor {
@@ -88,21 +93,32 @@ h2 {
 
 button {
   border: none;
+  border-radius: 50%;
+  /* align child item to the right, similar to justify-self if that actually existed */
+  margin-left: auto;
+  width: 40px;
+  height: 40px;
+  margin-bottom: 10px;
 }
 
 #share-container {
   display: none;
   align-items: center;
-  justify-content: flex-start;
   padding-left: 40px;
   padding-right: 40px;
+  padding-bottom: 10px;
   background: hsl(214, 17%, 51%);
   color: hsl(210, 46%, 95%);
+  border-radius: 0 0 5px 5px;
+  min-width: 20px;
 }
 
 #share-container > img {
-  width: 30px;
-  margin: 10px;
+  max-width: 30px;
+  /* ensures responsive icons */
+  width: 100%;
+  height: auto;
+  margin: 1em;
 }
 
 @media screen and (min-width: 600px) {
